<resources>
    <string name="app_name">Budget Manager</string>
    <string name="app_icon">App Icon</string>
    <string name="budget_manager">Budget Manager</string>
    <string name="new_budget">New Budget</string>
    <string name="enter_budget_log_name">Enter budget log name</string>
    <string name="add">Add</string>
    <string name="add_expense">New expense</string>
    <string name="budget">Budget:</string>
    <string name="spent">Spent:</string>
    <string name="back">Back</string>
    <string name="enter_budget">Enter budget</string>
    <string name="enter_expense_info">Enter expense info</string>
    <string name="enter_expense_cost">Enter expense cost</string>
    <string name="enter_expense_type">Enter expense Type</string>
    <string name="update">Update</string>
    <string name="delete_title">Delete</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="bgn_currency">BGN</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="expense_types">
        <item>Personal</item>
        <item>Food</item>
        <item>Taxes</item>
        <item>Gift</item>
        <item>Shopping</item>
        <item>Entertainment</item>
        <item>Home</item>
        <item>Car</item>
        <item>Medical</item>
        <item>Other</item>
    </string-array>
</resources>