<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/expenseCloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/expenseInfoInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_expense_info"
        android:inputType="text|textNoSuggestions"
        android:textColor="@color/black"
        android:textColorHint="@color/VeryDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/expenseTypeInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:dropDownWidth="wrap_content"
        android:importantForAutofill="no"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/expenseValueInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseInfoInput" />

    <EditText
        android:id="@+id/expenseValueInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_expense_cost"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/VeryDarkGray"
        app:layout_constraintBottom_toTopOf="@+id/expenseAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/expenseAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_elements_background"
        android:text="@string/add"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
