<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gainsboro">

    <TextView
        android:id="@+id/budgetLogName"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expensesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/recycler_view_container"
        android:padding="4dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/addExpenseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetLogName" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesList">

        <TextView
            android:id="@+id/budgetLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:text="@string/budget"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/budgetVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/budgetCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bgn_currency"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesList">

        <TextView
            android:id="@+id/SpentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/spent"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SpentVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/spentCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bgn_currency"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/addExpenseBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:text="@string/add_expense"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/expensesBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <android.widget.Button
        android:id="@+id/expensesBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
    android:id="@+id/expenseProgressBar"
    style="@android:style/Widget.ProgressBar.Horizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:indeterminate="false"
    android:indeterminateBehavior="repeat"
    android:indeterminateOnly="false"
    android:progressDrawable="@drawable/progress_horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>